<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="6dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:paddingBottom="20dp"
        android:background="@drawable/bg_dialog"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

            <TextView
                android:id="@+id/idTitleConnectionDialog"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/internet_state_title"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:padding="10dp"
                android:background="@drawable/bg_title"/>

        <TextView
            android:id="@+id/idMessageConnectionDialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:lineSpacingExtra="6dp"
            android:text="@string/internet_state_message"
            android:textColor="#333333"
            android:textSize="16sp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.27" />

            <Button
                android:id="@+id/idConnectionButton"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_weight="1"
                android:background="@drawable/bt_dialog_positive"
                android:onClick="buContinue"
                android:text="@string/ok"
                android:textColor="@android:color/white" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.28" />
        </LinearLayout>
    </LinearLayout>




</RelativeLayout>